--- a/CódigoFuente/BitacorasProduccion/Views/OrdenesTrabajo/Create.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/OrdenesTrabajo/Create.cshtml
@@ -18,10 +18,13 @@
     <link href="@Url.Content("~/Content/vendors/select2/css/select2.css")" rel="stylesheet">
     <link href="@Url.Content("~/Content/vendors/select2-bootstrap4-theme/select2-bootstrap4.min.css")" rel="stylesheet">
 
+    <style>
+        .text_derecha {
+            text-align: right;
+        }
+    </style>
+
 }
-
-
-
 
 <div class="right_col" role="main">
     <div class="">
@@ -62,8 +65,12 @@
 
                             //Valores ocultos
                             <input type="hidden" id="id_solicitante" name="id_solicitante" value="@solicitante.id">
-                            <input type="hidden" id="id_area" name="id_area" value="@solicitante..">
+                            <input type="hidden" id="estatus" name="estatus" value="@Bitacoras.Util.OT_Status.ABIERTO">
 
+                            if (solicitante.Area != null)
+                            {
+                                <input type="hidden" id="id_area" name="id_area" value="@solicitante.Area.clave">
+                            }
 
                             //@Html.HiddenFor(model => model.id_planta)
 
@@ -75,22 +82,91 @@
                             </div>
                             <div class="form-group row">
                                 <!--solicitante-->
-                                @Html.LabelFor(model => model.id_solicitante, new { @class = "control-label col-md-1" })
-                                <div class="col-md-3">
+                                @Html.LabelFor(model => model.id_solicitante, new { @class = "control-label col-md-1 text_derecha" })
+                                <div class="col-md-4">
                                     <input type="text" class="form-control" value="@solicitante.ConcatNombre" readonly>
                                     @Html.ValidationMessageFor(model => model.id_solicitante, "", new { @class = "text-danger" })
                                 </div>
 
                                 <!-- Área -->
-                                <label class="control-label col-md-1 float-right">
-                                    &Aacute;rea
-                                </label>
-                                <div class="col-md-2">
-                                    <input type="text" class="form-control col-md-12" style="text-align: right;" value="" readonly>
+                                @Html.LabelFor(model => model.id_area, new { @class = "control-label col-md-1 text_derecha" })
+                                <div class="col-md-3">
+                                    <input type="text" class="form-control col-md-12 text_derecha" value="@(solicitante.Area != null ? solicitante.Area.descripcion : "NO DISPONIBLE" )" readonly>
                                     @Html.ValidationMessageFor(model => model.id_area, "", new { @class = "text-danger" })
+                                </div>
+
+                                <!--Fecha solicitud-->
+                                @Html.LabelFor(model => model.fecha_solicitud, new { @class = "control-label col-md-1 text_derecha" })
+                                <div class="col-md-2">
+                                    <input type="text" class="form-control text_derecha" value="@DateTime.Now.ToString("yyyy-MM-dd")" readonly>
+                                    @Html.ValidationMessageFor(model => model.fecha_solicitud, "", new { @class = "text-danger" })
                                 </div>
                             </div>
 
+                            if (ViewBag.MuestraLineas != null && ViewBag.MuestraLineas)
+                            {
+
+                                <div class="form-group row">
+                                    <!--id linea-->
+                                    @Html.LabelFor(model => model.id_linea, new { @class = "control-label col-md-1 text_derecha" })
+                                    <div class="col-md-4">
+                                        @Html.DropDownList("id_linea", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
+                                        @Html.ValidationMessageFor(model => model.id_linea, "", new { @class = "text-danger" })
+                                    </div>
+                                </div>
+                            }
+
+                            @*<div class="form-group row">
+                <span style="color:black"><b>DESCRIPCI&Oacute;N</b></span>
+            </div>*@
+                            <div class="form-group row">
+                                <!--Titulo-->
+                                @Html.LabelFor(model => model.titulo, new { @class = "control-label col-md-1 text_derecha" })
+                                <div class="col-md-8">
+                                    @Html.EditorFor(m => m.titulo, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
+                                    @Html.ValidationMessageFor(model => model.titulo, "", new { @class = "text-danger" })
+                                </div>
+                                <!--Urgencia-->
+                                @Html.LabelFor(model => model.nivel_urgencia, new { @class = "control-label col-md-1 text_derecha" })
+                                <div class="col-md-2">
+                                    @Html.DropDownList("nivel_urgencia", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
+                                    @Html.ValidationMessageFor(model => model.nivel_urgencia, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+
+
+
+                            <div class="item form-group">
+                                @Html.LabelFor(model => model.descripcion, new { @class = "control-label col-md-12 col-sm-12", @style = "text-align:left" })
+
+                            </div>
+                            <div class="item form-group">
+                                <div class="col-md-12">
+                                    @Html.TextAreaFor(model => model.descripcion, new { @class = "form-control", @rows = "4", @autocomplete = "off" })
+                                    @Html.ValidationMessageFor(model => model.descripcion, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+
+                            <div class="ln_solid"></div>
+                            <div class="form-group row">
+                                <span style="color:black"><b>DOCUMENTOS SOPORTE</b></span>
+                            </div>
+
+                            <div class="form-group row">
+                                @Html.LabelFor(model => model.id_documento_solicitud, new { @class = "control-label col-md-2" })
+                                <div class="col-md-6">
+
+                                    <div class="input-group">
+                                        <div class="custom-file">
+                                            @Html.TextBoxFor(m => m.PostedFileSolicitud, new { @class = "custom-file-input", type = "file", @accept = ".xls,.xlsx,.png, .jpeg, .jpg, .pdf, .doc, .docx, .rar, .zip, .eml" })
+                                            <label class="custom-file-label" for="PostedFileSoporte" style="text-align:left">Seleccione un archivo...</label>
+                                        </div>
+                                    </div>
+                                    @Html.ValidationMessageFor(m => m.PostedFileSolicitud, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+
+                            <div class="ln_solid"></div>
 
                             <div class="item form-group">
                                 <div class="col-md-12 col-sm-12 offset-md-12">
@@ -102,7 +178,7 @@
                 </div>
                 <div>
                     <br />
-                    <a href="javascript: history.go(-1)" class="btn btn-round btn-info btm-sm" title="Volver">
+                    <a onclick="volverAtras()" class="btn btn-round btn-info btm-sm" title="Volver" style="color:white">
                         <i class="fa fa-arrow-circle-left"></i> Volver
                     </a>
                 </div>
@@ -127,10 +203,10 @@
             $('.select2bs4').select2({
                 theme: 'bootstrap4'
             })
-                        
+
         });
 
-        
+
         window.onload = function () {
             clicMenu(1);
         }
