--- a/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
@@ -133,7 +133,7 @@
                                         </li>
                                     }
                                     @if (User.IsInRole(TipoRoles.IT_MATRIZ_REQUERIMIENTOS_CERRAR) || User.IsInRole(TipoRoles.IT_CATALOGOS) || User.IsInRole(TipoRoles.IT_SOLICITUD_USUARIOS)
-                                        || User.IsInRole(TipoRoles.IT_INVENTORY))
+                                        || User.IsInRole(TipoRoles.IT_INVENTORY) || User.IsInRole(TipoRoles.IT_ASIGNACION_HARDWARE))
                                     {
                                         <li class="@(ViewBag.PrimerNivel == "sistemas" ? "active" : null )">
                                             <a><i class="fa fa-computer"></i>Sistemas<span class="fa fa-chevron-down"></span></a>
@@ -167,30 +167,8 @@
                                                 @if (User.IsInRole(TipoRoles.IT_INVENTORY))
                                                 {
                                                     <h3>Inventory</h3>
-                                                    <li class="link @(ViewBag.SegundoNivel == "IT_Catalogos_inventory" ? "active" : null )">
-                                                        <a>Hardware <span class="fa fa-chevron-down"></span></a>
-                                                        <ul class="nav child_menu" style="@(ViewBag.SegundoNivel == "IT_Catalogos_inventory" ? "display:block" : null )">
-                                                            <li class="@(ViewBag.TercelNivel == "IT_Inventory_desktop" ? "current-page" : null )"><a href="@Url.Action("Desktop", "IT_Inventory_items")">Desktops</a></li>
-                                                            <li class="@(ViewBag.TercelNivel == "IT_Inventory_laptop" ? "current-page" : null )"><a href="@Url.Action("Laptop", "IT_Inventory_items")">Laptops</a></li>
-                                                            <li class="@(ViewBag.TercelNivel == "IT_Inventory_monitor" ? "current-page" : null )"><a href="@Url.Action("Monitor", "IT_Inventory_items")">Monitors</a></li>
-                                                            <li class="@(ViewBag.TercelNivel == "IT_Inventory_printer" ? "current-page" : null )"><a href="@Url.Action("Printer", "IT_Inventory_items")">Printers</a></li>
-                                                            <li class="@(ViewBag.TercelNivel == "IT_Inventory_label_printer" ? "current-page" : null )"><a href="@Url.Action("Label_printer", "IT_Inventory_items")">Label Printers</a></li>
-                                                            <li class="@(ViewBag.TercelNivel == "IT_Inventory_PDA" ? "current-page" : null )"><a href="@Url.Action("PDA", "IT_Inventory_items")">PDAs</a></li>
-                                                            <li class="@(ViewBag.TercelNivel == "IT_Inventory_server" ? "current-page" : null )"><a href="@Url.Action("Server", "IT_Inventory_items")">Servers</a></li>
-                                                            <li class="@(ViewBag.TercelNivel == "IT_Inventory_tablet" ? "current-page" : null )"><a href="@Url.Action("Tablet", "IT_Inventory_items")">Tablets</a></li>
-                                                            <li class="@(ViewBag.TercelNivel == "IT_Inventory_radio" ? "current-page" : null )"><a href="@Url.Action("Radio", "IT_Inventory_items")">Radios</a></li>
-                                                            <li class="@(ViewBag.TercelNivel == "IT_Inventory_ap" ? "current-page" : null )"><a href="@Url.Action("AP", "IT_Inventory_items")">APs</a></li>
-                                                            <li class="@(ViewBag.TercelNivel == "IT_Inventory_scanner" ? "current-page" : null )"><a href="@Url.Action("Scanner", "IT_Inventory_items")">Scanners</a></li>
-
-                                                        </ul>
-                                                    </li>
-
-                                                    <li class="link @(ViewBag.SegundoNivel == "IT_Catalogos_inventory_software" ? "active" : null )">
-                                                        <a>Software <span class="fa fa-chevron-down"></span></a>
-                                                        <ul class="nav child_menu" style="@(ViewBag.SegundoNivel == "IT_Catalogos_inventory_software" ? "display:block" : null )">
-                                                            <li class="@(ViewBag.TercelNivel == "IT_Inventory_software" ? "current-page" : null )"><a href="@Url.Action("Index", "IT_Inventory_software")">Software List</a></li>
-                                                        </ul>
-                                                    </li>
+                                                    <li class="@(ViewBag.SegundoNivel == "it_inventory_hardware" ? "current-page" : null )"><a href="@Url.Action("index", "IT_Inventory_items")">Hardware</a></li>
+                                                    <li class="@(ViewBag.SegundoNivel == "IT_Inventory_software" ? "current-page" : null )"><a href="@Url.Action("index", "IT_Inventory_software")">Software</a></li>
 
                                                     <li class="link @(ViewBag.SegundoNivel == "IT_Catalogos_inventory_telefonia" ? "active" : null )">
                                                         <a>Telefon&iacute;a <span class="fa fa-chevron-down"></span></a>
@@ -199,6 +177,15 @@
                                                             <li class="@(ViewBag.TercelNivel == "IT_inventory_cellular_plans" ? "current-page" : null )"><a href="@Url.Action("Index", "IT_inventory_cellular_plans")">Planes</a></li>
                                                         </ul>
                                                     </li>
+                                                }
+
+
+                                                @if (User.IsInRole(TipoRoles.IT_ASIGNACION_HARDWARE))
+                                                {
+
+                                                    <h3>Asignaci&oacute;n</h3>
+                                                    <li class="@(ViewBag.SegundoNivel == "it_asignacion_hardware" ? "current-page" : null )"><a href="@Url.Action("index", "it_asignacion_hardware")">Asignaci&oacute;n a Usuarios</a></li>
+
                                                 }
                                             </ul>
                                         </li>
