--- a/CódigoFuente/BitacorasProduccion/Views/empleados/Index.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/empleados/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<Portal_2_0.Models.empleados>
+﻿@using Clases.Util;
+@model IEnumerable<Portal_2_0.Models.empleados>
 
 @{
     ViewBag.Title = "Listado de Empleados";
@@ -76,21 +77,27 @@
                     <div class="x_content">
                         <div class="row">
                             <div class="col-sm-12">
-                                <div class="card-box table-responsive">
-                                    <div class="form-group">
-
-                                        <a href="@Url.Action( "Create", ViewBag.ControllerName)" class="btn btn-success">
+                                <div class="form-group">
+                                    @if (User.IsInRole(TipoRoles.RH))
+                                    {
+                                        <a href="@Url.Action("Create", ViewBag.ControllerName)" class="btn btn-success" style="color:white">
                                             <i class="fa fa-plus-square"></i>
                                             Crear nuevo
                                         </a>
-                                    </div>
-                                    <div class="form-group" style="text-align:right;color:black">
-
-                                        <a class="btn btn-warning" id="limpiar-btn">
-                                            <i class="fa-solid fa-arrows-rotate"></i>
-                                            Limpiar Filtros
+                                        <a onclick="mostrarModalJefe()" class="btn btn-info" style="color:white">
+                                            <i class="fa-solid fa-sitemap"></i>
+                                            Cambio de Jefe
                                         </a>
-                                    </div>
+                                    }
+                                </div>
+                                <div class="form-group" style="text-align:right;color:black">
+                                    <a class="btn btn-warning" id="limpiar-btn">
+                                        <i class="fa-solid fa-arrows-rotate"></i>
+                                        Limpiar Filtros
+                                    </a>
+                                </div>
+                                <div class="card-box table-responsive">
+
                                     <table id="datatable_individual_searching" class="table table-striped table-bordered" cellspacing="0" style="width:100%">
                                         <thead>
                                             <tr>
@@ -248,14 +255,47 @@
     </div>
 </div>
 
+<!-- Modal JEFE Modelo -->
+<div class="modal fade" id="modalJefe" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h6 class="modal-title" id="exampleModalLongTitle">Jefe Actual</h6>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            @using (Html.BeginForm("CambioJefe", null, FormMethod.Get))
+            {
+                <div class="modal-body">
+                    <div class="form-group row">
+                        <h6>Seleccione el Jefe Actual</h6>
+                    </div>
+                    <div class="form-group row">
+                        <div class="col-md-12">
+                            @Html.DropDownList("id_jefe_directo", null, htmlAttributes: new { @class = "select2bs4 col-md-12", @style = "width:100%", @required = "required" })
+                            <span class="field-validation-valid text-danger" data-valmsg-for="id_jefe_directo" data-valmsg-replace="true"></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+                    <button type="submit" class="btn btn-primary">Continuar</button>
+                </div>
+            }
+        </div>
+    </div>
+</div>
 
 @section scripts
 {
+    @Scripts.Render("~/bundles/jqueryval")
     <!-- SweetAlert2 -->
     @Scripts.Render(Url.Content("~/Content/vendors/sweetalert2/sweetalert2.min.js"))
     @Scripts.Render(Url.Content("~/Scripts/AlertasSweetAlert.js"))
     @Scripts.Render(Url.Content("~/Content/vendors/select2/js/select2.full.min.js"))
     @Scripts.Render("~/bundles/dataTables_js")
+
 
     <script>
 
@@ -339,6 +379,11 @@
                 exportar("exportartkmm");
             });
 
+            // Initialize Select2 Elements (debe ir después de asignar el valor)
+            $('.select2bs4').select2({
+                theme: 'bootstrap4'
+            })
+
             $.unblockUI();
 
         });
@@ -415,6 +460,13 @@
 
         //variable global para la tabla
         var table;
+
+
+        //muestra el modal de autorizar
+        function mostrarModalJefe() {
+            $('#modalJefe').modal('show')
+
+        }
 
         //agranda el tamaño de la barra
         window.onload = function () {
